Re-ordering face maps messes up the names of other face maps #79973

Closed
opened 2020-08-21 05:21:59 +02:00 by Alistair Sealy · 6 comments

System Information
Operating system: Linux-4.15.0-112-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.48

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: ce0bcd5fbf
Also broken: 2.83.5, 2.83.4, 2.82, 2.81, 2.80

Short description of error
When using the up arrow to move a face map from the top of the list directly to the bottom, it appears in the UI that the face map has been moved to the bottom of the list and all other face maps have been moved up by one position. However the actual behaviour seems to be to swap the top and bottom elements of the list, and to leave the other face maps in the same position in the list. In practice this means that all the face maps (except the one that was moved) are now incorrectly named in the UI.
The same problem occurs in reverse when using the down arrow to shift a face map from the bottom of the list to the top.
Re-ordering the elements up and down within the list without pushing them off the end seems fine.

Exact steps for others to reproduce the error
The attached .blend file contains a Suzanne with four face maps, for the left and right ears and eyes, all named appropriately*.
If you use the down arrow to move "Left Ear" from the bottom of the list directly to the top, then the other three face maps are now named incorrectly.

*(Edit: Note that 'left' and 'right' are from the perspective of the person looking at the suzanne face-to-face, not from the perspective of the suzanne itself. So admittedly the naming is perhaps less clear than I thought at the time, but the file is still a good example for the problem)

Suzanne_Face_Maps.blend

**System Information** Operating system: Linux-4.15.0-112-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 410.48 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-20 18:28, hash: `ce0bcd5fbf` Also broken: 2.83.5, 2.83.4, 2.82, 2.81, 2.80 **Short description of error** When using the up arrow to move a face map from the top of the list directly to the bottom, it appears in the UI that the face map has been moved to the bottom of the list and all other face maps have been moved up by one position. However the actual behaviour seems to be to swap the top and bottom elements of the list, and to leave the other face maps in the same position in the list. In practice this means that all the face maps (except the one that was moved) are now incorrectly named in the UI. The same problem occurs in reverse when using the down arrow to shift a face map from the bottom of the list to the top. Re-ordering the elements up and down within the list without pushing them off the end seems fine. **Exact steps for others to reproduce the error** The attached .blend file contains a Suzanne with four face maps, for the left and right ears and eyes, all named appropriately*. If you use the down arrow to move "Left Ear" from the bottom of the list directly to the top, then the other three face maps are now named incorrectly. *(Edit: Note that 'left' and 'right' are from the perspective of the person looking at the suzanne face-to-face, not from the perspective of the suzanne itself. So admittedly the naming is perhaps less clear than I thought at the time, but the file is still a good example for the problem) [Suzanne_Face_Maps.blend](https://archive.blender.org/developer/F8798813/Suzanne_Face_Maps.blend)
Author

Added subscriber: @alisealy

Added subscriber: @alisealy

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by bfa485a26f

This issue was referenced by bfa485a26ffe5897e23f7618071e21bc953fc445

This issue was referenced by 211b390871

This issue was referenced by 211b39087117664a196825ec62e94adb8ff6e623

This issue was referenced by a440060142

This issue was referenced by a440060142caed013252696b91b930376a298fe5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-08-31 14:01:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79973
No description provided.