Fix T79973: Re-ordering face maps messes up the names of other face maps

Use a remap function instead a swap.

Reviewed By: campbellbarton

Differential Revision: https://developer.blender.org/D8739